# TADA2025

./: README.md  README.me  pyproject.toml  requirements.txt  setup.py
DemoQADriver/: LICENSE  MANIFEST.in  README.md  __init__.py  demoqa_driver.py  setup.py
DemoQADriver/DemoQALib/: demoqa.py
DemoQADriver/DemoQALib/Elements/: __init__.py  checkbox.py  textbox.py
DemoQADriver/DemoQALib/Locators/: main_page.py
DemoQADriver/DemoQALib/Locators/Elements/: textbox.py  web_tables.py
DemoQADriver/robotframework_DEMOQA_driver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
TADA2025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Test_repo/Tests/: test_1.py
tests/: test_open_session.py
